@@ -13,7 +13,7 @@ Thanks to all the other patch writers:
   Stylianos Papanastasiou <stelios@dcs.gla.ac.uk> (patch for "downloaded move")
   Ortwin Forster <ortwin@videotron.ca> (patch for saxutils.escape in localdb)
   Camille Moncelier <pix@devlife.org> (patch for iPod video device support)
-  Nick <nikosapi@gmail.com> (many patches for iPod 5G support)
+  Nick <nikosapi@gmail.com> (many patches for iPod 5G support + mplayer-length)
   Seth Remington <sremington@saberlogic.com> (several important bugfixes)
 
 
