@@ -1,3 +1,9 @@
+Thu, 28 Dec 2006 14:39:06 +0100 <thp@perli.net>
+        * src/gpodder/libipodsync.py: Add support for non-mp3 file 
+          length detection using mplayer if available (thanks to
+          Nick <nikosapi gmail com> for the patch)
+        * bin/gpodder: bumped version + release date
+
 Wed, 20 Dec 2006 20:43:02 +0100 <thp@perli.net>
         * src/gpodder/gpodder.py: Added modified patch from Seth 
           Remington to add support for a "download new episodes from 
